Se agrega funcionalidad registro de planes y paquetes para consumo en pagina web principal

--- a/front/src/app/dashboard-e-commerce/home/modules/planes-internet/detalle-plan/detalle-plan.component.html
+++ b/front/src/app/dashboard-e-commerce/home/modules/planes-internet/detalle-plan/detalle-plan.component.html
@@ -125,6 +125,6 @@
 </div>
 
 <div class="modal-footer" style="text-align: center;">
-    <button type="button" class="btn btn-primary" (click)="modificarPlan()"><b>Modificar Plan</b></button>
+    <button type="button" class="btn btn-primary" (click)="modificarPlan()"><b>Modificar</b></button>
     <button type="button" class="btn btn-danger" (click)="cerrarModal()"><b>Cerrar</b></button>
 </div>
