--- a/front/src/app/dashboard-e-commerce/home/components/sidenav/sidenav.component.html
+++ b/front/src/app/dashboard-e-commerce/home/components/sidenav/sidenav.component.html
@@ -31,7 +31,7 @@
                 <i class="bi bi-wifi"></i><span>Planes Internet</span><i class="bi bi-chevron-down ms-auto"></i>
             </a>
             <ul id="planesInternet" class="nav-content collapse" data-bs-parent="#sidebar-nav">
-                <li>
+                <li (click)="abrirModal('registroPlan')">
                     <a>
                         <i class="bi bi-circle"></i><span>Registro</span>
                     </a>
