--- a/front/src/app/dashboard-e-commerce/home/modules/planes-internet/detalle-plan/detalle-plan.component.html
+++ b/front/src/app/dashboard-e-commerce/home/modules/planes-internet/detalle-plan/detalle-plan.component.html
@@ -102,7 +102,8 @@
                         <div class="col-lg-2" *ngIf="!mostrarUpdate">
                             <label class="form-label">&nbsp;</label>
                             <button class="btn btn-primary form-control t-bold"
-                                (click)="registrarCaracteristicaPlan()"><i class="bi bi-plus-circle"></i></button>
+                                (click)="registrarCaracteristicaPlan()"
+                                [disabled]="canRegisterCaract()"><i class="bi bi-plus-circle"></i></button>
                         </div>
                         <div class="col-lg-1 col-6" *ngIf="mostrarUpdate">
                             <label class="form-label">&nbsp;</label>
