--- a/front/src/app/dashboard-e-commerce/home/components/sidenav/sidenav.component.html
+++ b/front/src/app/dashboard-e-commerce/home/components/sidenav/sidenav.component.html
@@ -72,7 +72,7 @@
                         <i class="bi bi-circle"></i><span>Apartados Productos</span>
                     </a>
                 </li>
-                <li>
+                <li (click)="abrirModal('catalogoExtrasPlanes')">
                     <a>
                         <i class="bi bi-circle"></i><span>Extras planes internet</span>
                     </a>
