--- a/front/src/app/dashboard-e-commerce/home/modules/planes-internet/detalle-plan/detalle-plan.component.html
+++ b/front/src/app/dashboard-e-commerce/home/modules/planes-internet/detalle-plan/detalle-plan.component.html
@@ -92,12 +92,15 @@
                 <div class="tab-pane fade" id="bordered-justified-profile" role="tabpanel"
                     aria-labelledby="profile-tab">
                     <form class="row g-3" autocomplete="off" [formGroup]="formPlan">
-                        <div class="col-lg-10">
+                        <div class="col-lg-9 col-11">
                             <label for="caracteristica" class="form-label required">Característica:</label>
                             <select formControlName="caracteristica" id="caracteristica" class="form-control">
                                 <option value="" style="display: none; visibility: hidden;">Elija una característica</option>
                                 <option *ngFor="let caracteristica of caracteristicas" [value]="caracteristica.pkCatCaracteristica">{{caracteristica.nombre}}</option>
                             </select>
+                        </div>
+                        <div class="col-1 d-flex justify-content-center align-items-center">
+                            <h4 style="margin-top: 40px; text-align: center !important;"><i class="bi {{this.obtenerIcono()}}"></i></h4>
                         </div>
                         <div class="col-lg-2" *ngIf="!mostrarUpdate">
                             <label class="form-label">&nbsp;</label>
